<resources>
    <string name="app_name">Variants</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="variation_type">Enter the variation type</string>
    <string name="heading">Omo Washing powder</string>
    <string name="submit_variations">Submit Variations</string>
    <string name="add_variation">add variation</string>
    <string name="choose_category">Enter the variations for size below</string>
    <string name="enter_the_price">Enter the price</string>
    <string name="Flavor">flavor</string>
    <string name="size">Size</string>

    <string-array name="variation_types">
        <item>Size</item>
        <item>Flavor</item>
    </string-array>
</resources>