<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="variantViewModel"
            type="com.mogere.variants.viewModel.VariantViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:padding="10dp"
            android:text="@={variantViewModel.heading}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.011" />


        <!--        <Spinner-->
<!--            android:id="@+id/variation_spinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="20dp"-->
<!--            android:tooltipText="Variation category"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.4"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/chooseType"-->
<!--            app:layout_constraintVertical_bias="0.152" />-->

        <TextView
            android:id="@+id/chooseType"
            android:layout_width="373dp"
            android:layout_height="72dp"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:padding="15dp"
            android:text="@string/choose_category"
            android:textAllCaps="true"
            android:textColor="#800080"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            app:layout_constraintVertical_bias="0.134" />

        <EditText
            android:id="@+id/variations"
            android:layout_width="173dp"
            android:layout_height="44dp"
            android:layout_margin="20dp"
            android:hint="@string/variation_type"
            android:text="@={variantViewModel.variations}"
            android:textColor="#999999"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseType"
            app:layout_constraintVertical_bias="0.064" />

        <Button
            android:id="@+id/addVariations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#800080"
            android:onClick="@{()->variantViewModel.onButtonClicked()}"
            android:text="@string/add_variation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/variations"
            app:layout_constraintVertical_bias="0.115" />

        <Button
            android:id="@+id/submitVariations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#800080"
            android:text="@string/submit_variations"
            android:onClick="@{()->variantViewModel.sendVariants()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="162dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:hint="@string/enter_the_price"
            android:inputType="number"
            android:text="@={variantViewModel.price}"
            android:textColor="#999999"
            app:layout_constraintBottom_toTopOf="@+id/addVariations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/variations"
            app:layout_constraintTop_toBottomOf="@+id/chooseType"
            app:layout_constraintVertical_bias="0.48" />

        <EditText
            android:id="@+id/VariationList"
            android:layout_width="366dp"
            android:layout_height="123dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@{String.valueOf(variantViewModel.variationList)}"
            app:layout_constraintBottom_toTopOf="@+id/submitVariations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addVariations" />






    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>